--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
 	<meta charset="UTF-8">
 	<title>Katie Situ</title>
 	<link href='http://fonts.googleapis.com/css?family=Lato:300,400,700,900,300italic' rel='stylesheet' type='text/css'>
-	
+	<link href="css/main.css" rel="stylesheet">
 </head>
 
 <body>
 
-<h1>Hello</h1>
+<h1>Welcome</h1>
 </body>
 </html>
