Added font family and logo

--- a/index.html
+++ b/index.html
@@ -9,6 +9,22 @@
 
 <body>
 
-<h1>Welcome</h1>
+	<div class="top">
+		<a class="nav-btn hide-text" href="#nav">Navigation</a>
+		<nav class="nav nav-top" data-state="collasped">
+			<ul>
+				<li><a href="index.html">Home</a></li>
+				<li><a href=".portfolio">About</a></li>
+				<li><a href=".about">Photos</a></li>
+			</ul>	
+		</nav>
+	</div>
+
+	<section class="home">
+		<img class="logo" src="img/logo.svg" alt="">
+	</section>
+
+	<script src="js/nav.js"></script>
+
 </body>
 </html>
