--- a/index.html
+++ b/index.html
@@ -3,26 +3,42 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Katie Situ</title>
+	<meta name="handheldfriendly" content="true">
+		<meta name="mobileoptimized" content="240">
+		<meta name="description" content="Katie Situ &middot; Photographer and Graphic Designer from Ottawa, Ontario, Canada.">
+		<meta name="keywords" content="photographer, graphic designer, art, ottawa, canada">
+		<meta name="author" content="Katie Situ">
+		<meta name="dcterms.rightsHolder" content="Katie Situ">
+		<meta name="ICBM" content="45.4214, -75.6919">
+		<meta name="viewport" content="width=device-width,initial-scale=1">
+		<link rel="author" href="humans.txt" />
+		<link rel="author" href="robots.txt" />
 	<link href='http://fonts.googleapis.com/css?family=Lato:300,400,700,900,300italic' rel='stylesheet' type='text/css'>
 	<link href="css/main.css" rel="stylesheet">
+	<link rel="shortcut icon" href="img/logo.svg"/>
 </head>
 
 <body>
 
-	<div class="top">
-		<a class="nav-btn hide-text" href="#nav">Navigation</a>
+	<section class="top">
+		<a class="nav-btn hide-text" href="#nav"></a>
 		<nav class="nav nav-top" data-state="collasped">
 			<ul>
-				<li><a href="index.html">Home</a></li>
-				<li><a href=".portfolio">About</a></li>
-				<li><a href=".about">Photos</a></li>
+				<li><a href="index.html">HOME</a></li>
+				<li><a href="portfolio">PORTFOLIO</a></li>
+				<li><a href=".about">CONTACT</a></li>
 			</ul>	
 		</nav>
-	</div>
-
-	<section class="home">
-		<img class="logo" src="img/logo.svg" alt="">
+		<div class="home">
+			<img class="logo" src="img/logo.svg" alt="">
+		</div>
 	</section>
+	
+		<section class="portfolio">
+			<h1>PORTFOLIO</h1>
+		</section>
+			
+
 
 	<script src="js/nav.js"></script>
 
