Adjusted nav and logo

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 <body>
 
 	<section class="top">
-		<a class="nav-btn hide-text" href="#nav"></a>
+		<a class="nav-btn hide-text" href="#nav">Navigation</a>
 		<nav class="nav nav-top" data-state="collasped">
 			<ul>
 				<li><a href="index.html">HOME</a></li>
