--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 		<meta name="viewport" content="width=device-width,initial-scale=1">
 		<link rel="author" href="humans.txt" />
 		<link rel="author" href="robots.txt" />
+		<link rel="stylesheet" href="flexslider/flexslider.css" type="text/css">
 	<link href='http://fonts.googleapis.com/css?family=Lato:300,400,700,900,300italic' rel='stylesheet' type='text/css'>
 	<link href="css/main.css" rel="stylesheet">
 	<link rel="shortcut icon" href="img/logo.svg"/>
@@ -35,11 +36,35 @@
 	</section>
 	
 		<section class="portfolio">
-			<h1>PORTFOLIO</h1>
+			<div class="photography">
+  			<ul class="slides">
+			<p class="flex-caption">YUSSO</p>
+				<li>
+					<img src="img/eben-2.jpg" alt="Ottawa Club Event Night">
+				</li>
+				<li>
+					<img src="img/eben-3.jpg" alt="Ottawa Club Event Night">
+				</li>
+				<li>
+					<img src="img/eben-4.jpg" alt="Ottawa Club Event Night">
+				</li>
+			</ul>
+			</div>
 		</section>
 			
 
-
+		<script src="flexslider/jquery.flexslider.js"></script>
+	
+	<script type="text/javascript">
+		$(window).load(function() {
+			$('.flexslider').flexslider({
+			animation: "slide",
+			smoothHeight: "true",
+			touch: "true",
+			keyboard: "true",
+			});
+		});
+	</script>
 	<script src="js/nav.js"></script>
 
 </body>
