Added photos and adjusted css

--- a/index.html
+++ b/index.html
@@ -36,24 +36,34 @@
 	</section>
 	
 		<section class="portfolio">
-			<div class="photography">
+			<div class="photography-yusso">
   			<ul class="slides">
-			<p class="flex-caption">YUSSO</p>
+			<p class="flex-caption">YUSSO // ARTIST PROMOTION</p>
 				<li>
-					<img src="img/eben-2.jpg" alt="Ottawa Club Event Night">
+					<img src="img/eben-2.jpg" alt="YUSSO">
 				</li>
+			</ul>
+			</div>
+			<div class="photography-jem">
+  			<ul class="slides">
+			<p class="flex-caption">YUSSO // ARTIST PROMOTION</p>
 				<li>
-					<img src="img/eben-3.jpg" alt="Ottawa Club Event Night">
+					<img src="img/jem-1.jpg" alt="YUSSO">
 				</li>
+			</ul>
+			</div>
+			<div class="photography-dani">
+  			<ul class="slides">
+			<p class="flex-caption">YUSSO // ARTIST PROMOTION</p>
 				<li>
-					<img src="img/eben-4.jpg" alt="Ottawa Club Event Night">
+					<img src="img/dani-3.jpg" alt="YUSSO">
 				</li>
 			</ul>
 			</div>
 		</section>
 			
 
-		<script src="flexslider/jquery.flexslider.js"></script>
+	<script src="flexslider/jquery.flexslider.js"></script>
 	
 	<script type="text/javascript">
 		$(window).load(function() {
