Changed photos and removed css

--- a/index.html
+++ b/index.html
@@ -46,17 +46,17 @@
 			</div>
 			<div class="photography-jem">
   			<ul class="slides">
-			<p class="flex-caption">YUSSO // ARTIST PROMOTION</p>
+			<p class="flex-caption">JEM // MODEL PORTRAITS</p>
 				<li>
 					<img src="img/jem-1.jpg" alt="YUSSO">
 				</li>
 			</ul>
 			</div>
-			<div class="photography-dani">
+			<div class="photography-twin">
   			<ul class="slides">
-			<p class="flex-caption">YUSSO // ARTIST PROMOTION</p>
+			<p class="flex-caption">AYMI // MODEL PORTRAITS</p>
 				<li>
-					<img src="img/dani-3.jpg" alt="YUSSO">
+					<img src="img/twin-4.jpg" alt="YUSSO">
 				</li>
 			</ul>
 			</div>
