Changed photo size for header

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
   			<ul class="slides">
 			<p class="flex-caption">YUSSO // ARTIST PROMOTION</p>
 				<li>
-					<img src="img/eben-2.jpg" alt="YUSSO">
+					<img src="http://placehold.it/1500x3500" alt="YUSSO">
 				</li>
 			</ul>
 			</div>
@@ -48,7 +48,7 @@
   			<ul class="slides">
 			<p class="flex-caption">JEM // MODEL PORTRAITS</p>
 				<li>
-					<img src="img/jem-1.jpg" alt="YUSSO">
+					<img src="http://placehold.it/1500x3500" alt="YUSSO">
 				</li>
 			</ul>
 			</div>
@@ -56,7 +56,7 @@
   			<ul class="slides">
 			<p class="flex-caption">AYMI // MODEL PORTRAITS</p>
 				<li>
-					<img src="img/twin-4.jpg" alt="YUSSO">
+					<img src="http://placehold.it/1500x3500" alt="YUSSO">
 				</li>
 			</ul>
 			</div>
