--- a/404.html
+++ b/404.html
@@ -1,8 +1,9 @@
 <!doctype html>
 <html>
 <head>
-<meta charset="UTF-8">
-<title>404 Page</title>
+	<meta charset="UTF-8">
+	<title>404 Page</title>
+	<link href="css/main.css" rel="stylesheet">
 </head>
 
 <body>
