Added Photo background for 404

--- a/404.html
+++ b/404.html
@@ -7,7 +7,21 @@
 </head>
 
 <body>
-
-<h1>404 Error - Page Not Found</h1>
+	<section class="top">
+		<a class="nav-btn hide-text" href="#nav">Navigation</a>
+		<nav class="nav nav-top" data-state="collasped">
+			<ul>
+				<li><a href="index.html">HOME</a></li>
+				<li><a href="portfolio">PORTFOLIO</a></li>
+				<li><a href=".about">CONTACT</a></li>
+			</ul>	
+		</nav>
+		<div class="error">
+			<h1>404 Error - Page Not Found</h1>
+			<p>Sorry, the page you're looking for is missing.</p>
+		</div>
+	</section>
+	
+	<script src="js/nav.js"></script>
 </body>
 </html>
