--- a/index.html
+++ b/index.html
@@ -36,29 +36,31 @@
 	</section>
 	
 		<section class="portfolio">
-			<div class="photography-yusso">
+			<div class="grid">
+			<div class="photography-yusso gutter unit unit-s-1 unit-m-1-2 unit-l-1-3">
   			<ul class="slides">
-			<p class="flex-caption">YUSSO // ARTIST PROMOTION</p>
+			<p class="flex-caption gutter unit unit-s-1 unit-m-1-2 unit-l-1-3">YUSSO // ARTIST PROMOTION</p>
 				<li>
 					<img src="http://placehold.it/1500x3500" alt="YUSSO">
 				</li>
 			</ul>
 			</div>
-			<div class="photography-jem">
+			<div class="photography-jem gutter unit unit-s-1 unit-m-1-2 unit-l-1-3">
   			<ul class="slides">
-			<p class="flex-caption">JEM // MODEL PORTRAITS</p>
+			<p class="flex-caption gutter unit unit-s-1 unit-m-1-2 unit-l-1-3">JEM // MODEL PORTRAITS</p>
 				<li>
 					<img src="http://placehold.it/1500x3500" alt="YUSSO">
 				</li>
 			</ul>
 			</div>
-			<div class="photography-twin">
+			<div class="photography-twin gutter unit unit-s-1 unit-m-1-2 unit-l-1-3">
   			<ul class="slides">
-			<p class="flex-caption">AYMI // MODEL PORTRAITS</p>
+			<p class="flex-caption gutter unit unit-s-1 unit-m-1-2 unit-l-1-3">AYMI // MODEL PORTRAITS</p>
 				<li>
 					<img src="http://placehold.it/1500x3500" alt="YUSSO">
 				</li>
 			</ul>
+			</div>
 			</div>
 		</section>
 			
