--- a/index.html
+++ b/index.html
@@ -37,69 +37,33 @@
 	
 		<section class="portfolio">
 			<div class="grid">
-			<div class="photography-yusso gutter unit unit-s-1 unit-m-1-2 unit-l-1-4">
+			<div class="flexslider gutter unit unit-s-1 unit-m-1-2 unit-l-1-4">
   			<ul class="slides">
-			<p class="flex-caption gutter unit unit-s-1 unit-m-1-2 unit-l-1-4">YUSSO // ARTIST PROMOTION</p>
+			<p class="flex-caption">YUSSO // ARTIST PROMOTION</p>
 				<li>
 					<img src="http://placehold.it/1500x3000" alt="YUSSO">
 				</li>
 			</ul>
 			</div>
-			<div class="photography-jem gutter unit unit-s-1 unit-m-1-2 unit-l-1-4">
+			<div class="flexslider gutter unit unit-s-1 unit-m-1-2 unit-l-1-4">
   			<ul class="slides">
-			<p class="flex-caption gutter unit unit-s-1 unit-m-1-2 unit-l-1-4">JEM // MODEL PORTRAITS</p>
+			<p class="flex-caption">JEM // MODEL PORTRAITS</p>
 				<li>
 					<img src="http://placehold.it/1500x3000" alt="YUSSO">
 				</li>
 			</ul>
 			</div>
-			<div class="photography-twin gutter unit unit-s-1 unit-m-1-2 unit-l-1-4">
+			<div class="flexslider gutter unit unit-s-1 unit-m-1-2 unit-l-1-4">
   			<ul class="slides">
-			<p class="flex-caption gutter unit unit-s-1 unit-m-1-2 unit-l-1-4">AYMI AND KELLY // FASHION</p>
+			<p class="flex-caption">AYMI AND KELLY // FASHION</p>
 				<li>
 					<img src="http://placehold.it/1500x3000" alt="YUSSO">
 				</li>
 			</ul>
 			</div>
-			<div class="photography-jem gutter unit unit-s-1 unit-m-1-2 unit-l-1-4">
+			<div class="flexslider gutter unit unit-s-1 unit-m-1-2 unit-l-1-4">
   			<ul class="slides">
-			<p class="flex-caption gutter unit unit-s-1 unit-m-1-2 unit-l-1-4">DANI // MODEL PORTRAITS</p>
-				<li>
-					<img src="http://placehold.it/1500x3000" alt="YUSSO">
-				</li>
-			</ul>
-			</div>
-			</div>
-		</section>
-		<section class="design">
-			<div class="grid">
-			<div class="gutter unit unit-s-1 unit-m-1-2 unit-l-1-4">
-  			<ul class="slides">
-			<p class="flex-caption gutter unit unit-s-1 unit-m-1-2 unit-l-1-4">XANDER SITU // LOGO DESIGN</p>
-				<li>
-					<img src="http://placehold.it/1500x3000" alt="YUSSO">
-				</li>
-			</ul>
-			</div>
-			<div class="gutter unit unit-s-1 unit-m-1-2 unit-l-1-4">
-  			<ul class="slides">
-			<p class="flex-caption gutter unit unit-s-1 unit-m-1-2 unit-l-1-4">DESIGN NAME // INFO</p>
-				<li>
-					<img src="http://placehold.it/1500x3000" alt="YUSSO">
-				</li>
-			</ul>
-			</div>
-			<div class="gutter unit unit-s-1 unit-m-1-2 unit-l-1-4">
-  			<ul class="slides">
-			<p class="flex-caption gutter unit unit-s-1 unit-m-1-2 unit-l-1-4">DESIGN NAME // INFO</p>
-				<li>
-					<img src="http://placehold.it/1500x3000" alt="YUSSO">
-				</li>
-			</ul>
-			</div>
-			<div class="gutter unit unit-s-1 unit-m-1-2 unit-l-1-4">
-  			<ul class="slides">
-			<p class="flex-caption gutter unit unit-s-1 unit-m-1-2 unit-l-1-4">DESIGN NAME // INFO</p>
+			<p class="flex-caption">DANI // MODEL PORTRAITS</p>
 				<li>
 					<img src="http://placehold.it/1500x3000" alt="YUSSO">
 				</li>
@@ -107,19 +71,10 @@
 			</div>
 			</div>
 		</section>
-		
 		<section class="contact grid">
 			<img class="gutter unit unit-s-1 unit-m-1-2 unit-l-1-2" src="http://placehold.it/150x150" alt="Katie Situ">
-			<p>KATIE SITU STRIVES TO BE A VERSATILE DESIGNER AND PHOTOGRAPHER.
-WHETHER IT’S PRINT, WEB OR PHOTOGRAPHY, IT CAN BE DIFFICULT TO
-MAINTAIN FOCUS THROUGHOUT THE WEBSITE WITH SUCH VERSATILITY WITHIN
-THE PORTFOLIO. THEREFORE, IT WAS BEST TO KEEP THE WEBSITE’S DESIGN
-AT A MINIMAL. THE COLOURS, ANY PATTERNS OR TEXTURES, AND FONTS
-WILL BE VERY SIMPLE IN ORDER TO MAINTAIN A CLEAN AND MINIMALISTIC
-APPEARANCE. THE BACKGROUND OF THE WEBSITE WILL FEATURE PERSONAL
-PHOTOGRAPHY TO SIMPLY PROMOTE IT IN AN APPEALING WAY. THE CHOICES
-OF THE MINIMALISTIC DESIGN ALLOWS THE DESIGNER TO EASILY SHOWCASE
-THEIR DIVERSE PORTFOLIO THROUGHOUT THE WEBSITE.</p>
+			<p>KATIE SITU STRIVES TO BE A VERSATILE DESIGNER AND PHOTOGRAPHER. WHETHER IT’S PRINT, WEB OR PHOTOGRAPHY, IT CAN BE DIFFICULT TO MAINTAIN FOCUS THROUGHOUT THE WEBSITE WITH SUCH VERSATILITY WITHIN THE PORTFOLIO. THEREFORE, IT WAS BEST TO KEEP THE WEBSITE’S DESIGN
+AT A MINIMAL. THE COLOURS, ANY PATTERNS OR TEXTURES, AND FONTS WILL BE VERY SIMPLE IN ORDER TO MAINTAIN A CLEAN AND MINIMALISTIC APPEARANCE. THE BACKGROUND OF THE WEBSITE WILL FEATURE PERSONAL PHOTOGRAPHY TO SIMPLY PROMOTE IT IN AN APPEALING WAY. THE CHOICES OF THE MINIMALISTIC DESIGN ALLOWS THE DESIGNER TO EASILY SHOWCASE THEIR DIVERSE PORTFOLIO THROUGHOUT THE WEBSITE.</p>
 		</section>
 			
 
