--- a/index.html
+++ b/index.html
@@ -39,7 +39,15 @@
 			<div class="grid">
 			<div class="flexslider gutter unit unit-s-1 unit-m-1-2 unit-l-1-4">
   			<ul class="slides">
-			<p class="flex-caption">YUSSO // ARTIST PROMOTION</p>
+			<p class="flex-caption">//PORTRAITS</p>
+				<li>
+					<img src="http://placehold.it/150x300" alt="YUSSO">
+				</li>
+			</ul>
+			</div>
+			<div class="flexslider gutter unit unit-s-1 unit-m-1-2 unit-l-1-4">
+  			<ul class="slides">
+			<p class="flex-caption">//FASHION</p>
 				<li>
 					<img src="http://placehold.it/1500x3000" alt="YUSSO">
 				</li>
@@ -47,7 +55,7 @@
 			</div>
 			<div class="flexslider gutter unit unit-s-1 unit-m-1-2 unit-l-1-4">
   			<ul class="slides">
-			<p class="flex-caption">JEM // MODEL PORTRAITS</p>
+			<p class="flex-caption">//MUSIC</p>
 				<li>
 					<img src="http://placehold.it/1500x3000" alt="YUSSO">
 				</li>
@@ -55,15 +63,7 @@
 			</div>
 			<div class="flexslider gutter unit unit-s-1 unit-m-1-2 unit-l-1-4">
   			<ul class="slides">
-			<p class="flex-caption">AYMI AND KELLY // FASHION</p>
-				<li>
-					<img src="http://placehold.it/1500x3000" alt="YUSSO">
-				</li>
-			</ul>
-			</div>
-			<div class="flexslider gutter unit unit-s-1 unit-m-1-2 unit-l-1-4">
-  			<ul class="slides">
-			<p class="flex-caption">DANI // MODEL PORTRAITS</p>
+			<p class="flex-caption">//FOOD</p>
 				<li>
 					<img src="http://placehold.it/1500x3000" alt="YUSSO">
 				</li>
