Adjusted font size

--- a/index.html
+++ b/index.html
@@ -72,9 +72,11 @@
 			</div>
 		</section>
 		<section class="contact grid">
-			<img class="gutter unit unit-s-1 unit-m-1-2 unit-l-1-2" src="http://placehold.it/150x150" alt="Katie Situ">
+		<div class="unit-s-1 unit-m-1 unit-l-1-2">
+			<h3>ABOUT</h3>
 			<p>KATIE SITU STRIVES TO BE A VERSATILE DESIGNER AND PHOTOGRAPHER. WHETHER IT’S PRINT, WEB OR PHOTOGRAPHY, IT CAN BE DIFFICULT TO MAINTAIN FOCUS THROUGHOUT THE WEBSITE WITH SUCH VERSATILITY WITHIN THE PORTFOLIO. THEREFORE, IT WAS BEST TO KEEP THE WEBSITE’S DESIGN
 AT A MINIMAL. THE COLOURS, ANY PATTERNS OR TEXTURES, AND FONTS WILL BE VERY SIMPLE IN ORDER TO MAINTAIN A CLEAN AND MINIMALISTIC APPEARANCE. THE BACKGROUND OF THE WEBSITE WILL FEATURE PERSONAL PHOTOGRAPHY TO SIMPLY PROMOTE IT IN AN APPEALING WAY. THE CHOICES OF THE MINIMALISTIC DESIGN ALLOWS THE DESIGNER TO EASILY SHOWCASE THEIR DIVERSE PORTFOLIO THROUGHOUT THE WEBSITE.</p>
+		</div>
 		</section>
 			
 
