--- a/index.html
+++ b/index.html
@@ -35,17 +35,19 @@
 		</div>
 	</section>
 	
-		<section class="portfolio">
-			<div class="grid">
-			<div class="flexslider gutter unit unit-s-1 unit-m-1-2 unit-l-1-4">
+		<section>
+		<div class="flexslider unit unit-s-1 unit-m-1-2 unit-l-1-4">
   			<ul class="slides">
 			<p class="flex-caption">//PORTRAITS</p>
 				<li>
-					<img src="http://placehold.it/150x300" alt="YUSSO">
+					<img src="http://placehold.it/1500x3000" alt="YUSSO">
+				</li>
+				<li>
+					<img src="http://placehold.it/1500x3000" alt="YUSSO">
 				</li>
 			</ul>
 			</div>
-			<div class="flexslider gutter unit unit-s-1 unit-m-1-2 unit-l-1-4">
+			<div class="flexslider unit unit-s-1 unit-m-1-2 unit-l-1-4">
   			<ul class="slides">
 			<p class="flex-caption">//FASHION</p>
 				<li>
@@ -53,7 +55,7 @@
 				</li>
 			</ul>
 			</div>
-			<div class="flexslider gutter unit unit-s-1 unit-m-1-2 unit-l-1-4">
+			<div class="flexslider unit unit-s-1 unit-m-1-2 unit-l-1-4">
   			<ul class="slides">
 			<p class="flex-caption">//MUSIC</p>
 				<li>
@@ -61,7 +63,7 @@
 				</li>
 			</ul>
 			</div>
-			<div class="flexslider gutter unit unit-s-1 unit-m-1-2 unit-l-1-4">
+			<div class="flexslider unit unit-s-1 unit-m-1-2 unit-l-1-4">
   			<ul class="slides">
 			<p class="flex-caption">//FOOD</p>
 				<li>
