--- a/index.html
+++ b/index.html
@@ -13,7 +13,6 @@
 		<meta name="viewport" content="width=device-width,initial-scale=1">
 		<link rel="author" href="humans.txt" />
 		<link rel="author" href="robots.txt" />
-		<link rel="stylesheet" href="flexslider/flexslider.css" type="text/css">
 	<link href='http://fonts.googleapis.com/css?family=Lato:300,400,700,900,300italic' rel='stylesheet' type='text/css'>
 	<link href="css/main.css" rel="stylesheet">
 	<link rel="shortcut icon" href="img/logo.svg"/>
@@ -36,9 +35,9 @@
 	</section>
 	
 		<section>
-		<div class="flexslider unit unit-s-1 unit-m-1-2 unit-l-1-4">
-  			<ul class="slides">
-			<p class="flex-caption">//PORTRAITS</p>
+		<div class="unit unit-s-1 unit-m-1-2 unit-l-1-4">
+  			<ul>
+			<p class="caption">//PORTRAITS</p>
 				<li>
 					<img src="http://placehold.it/1500x3000" alt="YUSSO">
 				</li>
@@ -47,25 +46,25 @@
 				</li>
 			</ul>
 			</div>
-			<div class="flexslider unit unit-s-1 unit-m-1-2 unit-l-1-4">
-  			<ul class="slides">
-			<p class="flex-caption">//FASHION</p>
+			<div class="unit unit-s-1 unit-m-1-2 unit-l-1-4">
+  			<ul>
+			<p class="caption">//FASHION</p>
 				<li>
 					<img src="http://placehold.it/1500x3000" alt="YUSSO">
 				</li>
 			</ul>
 			</div>
-			<div class="flexslider unit unit-s-1 unit-m-1-2 unit-l-1-4">
-  			<ul class="slides">
-			<p class="flex-caption">//MUSIC</p>
+			<div class="unit unit-s-1 unit-m-1-2 unit-l-1-4">
+  			<ul>
+			<p class="caption">//MUSIC</p>
 				<li>
 					<img src="http://placehold.it/1500x3000" alt="YUSSO">
 				</li>
 			</ul>
 			</div>
-			<div class="flexslider unit unit-s-1 unit-m-1-2 unit-l-1-4">
-  			<ul class="slides">
-			<p class="flex-caption">//FOOD</p>
+			<div class="unit unit-s-1 unit-m-1-2 unit-l-1-4">
+  			<ul>
+			<p class="caption">//FOOD</p>
 				<li>
 					<img src="http://placehold.it/1500x3000" alt="YUSSO">
 				</li>
@@ -81,19 +80,6 @@ AT A MINIMAL. THE COLOURS, ANY PATTERNS OR TEXTURES, AND FONTS WILL BE VERY SIMP
 		</div>
 		</section>
 			
-
-	<script src="flexslider/jquery.flexslider.js"></script>
-	
-	<script type="text/javascript">
-		$(window).load(function() {
-			$('.flexslider').flexslider({
-			animation: "slide",
-			smoothHeight: "true",
-			touch: "true",
-			keyboard: "true",
-			});
-		});
-	</script>
 	<script src="js/nav.js"></script>
 
 </body>
