--- a/index.html
+++ b/index.html
@@ -34,13 +34,10 @@
 		</div>
 	</section>
 	
-		<section>
+		<section class="grid">
 		<div class="unit unit-s-1 unit-m-1-2 unit-l-1-4">
   			<ul>
 			<p class="caption">//PORTRAITS</p>
-				<li>
-					<img src="http://placehold.it/1500x3000" alt="YUSSO">
-				</li>
 				<li>
 					<img src="http://placehold.it/1500x3000" alt="YUSSO">
 				</li>
