Removed slideshow css

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 	</section>
 	
 		<section class="grid">
-		<div class="unit unit-s-1 unit-m-1-2 unit-l-1-4">
+		<div id="slider" class="unit unit-s-1 unit-m-1-2 unit-l-1-4">
   			<ul>
 			<p class="caption">//PORTRAITS</p>
 				<li>
@@ -76,7 +76,7 @@
 AT A MINIMAL. THE COLOURS, ANY PATTERNS OR TEXTURES, AND FONTS WILL BE VERY SIMPLE IN ORDER TO MAINTAIN A CLEAN AND MINIMALISTIC APPEARANCE. THE BACKGROUND OF THE WEBSITE WILL FEATURE PERSONAL PHOTOGRAPHY TO SIMPLY PROMOTE IT IN AN APPEALING WAY. THE CHOICES OF THE MINIMALISTIC DESIGN ALLOWS THE DESIGNER TO EASILY SHOWCASE THEIR DIVERSE PORTFOLIO THROUGHOUT THE WEBSITE.</p>
 		</div>
 		</section>
-			
+		
 	<script src="js/nav.js"></script>
 
 </body>
