--- a/index.html
+++ b/index.html
@@ -25,16 +25,16 @@
 		<nav class="nav nav-top" data-state="collasped">
 			<ul>
 				<li><a href="index.html">HOME</a></li>
-				<li><a href="portfolio">PORTFOLIO</a></li>
-				<li><a href=".about">CONTACT</a></li>
+				<li><a href="#portfolio">PORTFOLIO</a></li>
+				<li><a href="#about">CONTACT</a></li>
 			</ul>	
 		</nav>
 		<div class="home">
 			<img class="logo" src="img/logo.svg" alt="">
 		</div>
 	</section>
-	
-		<section class="grid">
+		
+		<section id="portfolio" class="grid">
 		<div id="slider" class="unit unit-s-1 unit-m-1-2 unit-l-1-4">
   			<ul>
 			<p class="caption">//PORTRAITS</p>
@@ -69,7 +69,7 @@
 			</div>
 			</div>
 		</section>
-		<section class="contact grid">
+		<section id="about" class="contact grid">
 		<div class="unit-s-1 unit-m-1 unit-l-1-2">
 			<h3>ABOUT</h3>
 			<p>KATIE SITU STRIVES TO BE A VERSATILE DESIGNER AND PHOTOGRAPHER. WHETHER IT’S PRINT, WEB OR PHOTOGRAPHY, IT CAN BE DIFFICULT TO MAINTAIN FOCUS THROUGHOUT THE WEBSITE WITH SUCH VERSATILITY WITHIN THE PORTFOLIO. THEREFORE, IT WAS BEST TO KEEP THE WEBSITE’S DESIGN
