Added and Adjusted social links

--- a/index.html
+++ b/index.html
@@ -15,13 +15,22 @@
 		<link rel="author" href="robots.txt" />
 	<link href='http://fonts.googleapis.com/css?family=Lato:300,400,700,900,300italic' rel='stylesheet' type='text/css'>
 	<link href="css/main.css" rel="stylesheet">
+	<link href="http://netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css" rel="stylesheet">
 	<link rel="shortcut icon" href="img/logo.svg"/>
 </head>
 
 <body>
 
 	<section class="top">
-		<a class="nav-btn hide-text" href="#nav">Navigation</a>
+		<div>
+			<ul class="social">
+				<li><a href="https://www.facebook.com/katiesituphotography"><i class="fa fa-facebook"></i><span class="hide-text">Facebook</span></a></li>
+				<li><a href="https://twitter.com/"><i class="fa fa-twitter"></i><span class="hide-text">Twitter</span></a></li>
+			</ul>
+			<ul>
+				<li><a class="nav-btn hide-text" href="#nav">Navigation</a></li>
+			</ul>
+		</div>
 		<nav class="nav nav-top" data-state="collasped">
 			<ul>
 				<li><a href="index.html">HOME</a></li>
@@ -39,7 +48,7 @@
   			<ul>
 			<p class="caption">//PORTRAITS</p>
 				<li>
-					<img src="http://placehold.it/1500x3000" alt="YUSSO">
+					<img src="img/eben-2.jpg" alt="YUSSO">
 				</li>
 			</ul>
 			</div>
@@ -47,7 +56,7 @@
   			<ul>
 			<p class="caption">//FASHION</p>
 				<li>
-					<img src="http://placehold.it/1500x3000" alt="YUSSO">
+					<img src="img/dani-2.jpg" alt="YUSSO">
 				</li>
 			</ul>
 			</div>
@@ -55,7 +64,7 @@
   			<ul>
 			<p class="caption">//MUSIC</p>
 				<li>
-					<img src="http://placehold.it/1500x3000" alt="YUSSO">
+					<img src="img/eben-2.jpg" alt="YUSSO">
 				</li>
 			</ul>
 			</div>
@@ -63,7 +72,7 @@
   			<ul>
 			<p class="caption">//FOOD</p>
 				<li>
-					<img src="http://placehold.it/1500x3000" alt="YUSSO">
+					<img src="img/eben-2.jpg" alt="YUSSO">
 				</li>
 			</ul>
 			</div>
