Adjusted middle screen nav

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
   			<ul>
 			<p class="caption">//FASHION</p>
 				<li>
-					<img src="img/dani-2.jpg" alt="YUSSO">
+					<img src="img/eben-2.jpg" alt="YUSSO">
 				</li>
 			</ul>
 			</div>
