--- a/index.html
+++ b/index.html
@@ -78,14 +78,22 @@
 			</div>
 			</div>
 		</section>
-		<section id="about" class="contact grid">
-		<div class="unit-s-1 unit-m-1 unit-l-1-2">
-			<h3>ABOUT</h3>
-			<p>KATIE SITU STRIVES TO BE A VERSATILE DESIGNER AND PHOTOGRAPHER. WHETHER IT’S PRINT, WEB OR PHOTOGRAPHY, IT CAN BE DIFFICULT TO MAINTAIN FOCUS THROUGHOUT THE WEBSITE WITH SUCH VERSATILITY WITHIN THE PORTFOLIO. THEREFORE, IT WAS BEST TO KEEP THE WEBSITE’S DESIGN
-AT A MINIMAL. THE COLOURS, ANY PATTERNS OR TEXTURES, AND FONTS WILL BE VERY SIMPLE IN ORDER TO MAINTAIN A CLEAN AND MINIMALISTIC APPEARANCE. THE BACKGROUND OF THE WEBSITE WILL FEATURE PERSONAL PHOTOGRAPHY TO SIMPLY PROMOTE IT IN AN APPEALING WAY. THE CHOICES OF THE MINIMALISTIC DESIGN ALLOWS THE DESIGNER TO EASILY SHOWCASE THEIR DIVERSE PORTFOLIO THROUGHOUT THE WEBSITE.</p>
+		<section id="about" class="grid contact">
+		<div id="slider" class="unit unit-s-1 unit-m-1-3">
+			<img src="img/graphic-design.svg" alt="">
+			<h4>GRAPHIC DESIGN</h4>
+			<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque cursus quam vel est interdum, eu porttitor diam sollicitudin. Suspendisse id erat lorem. Aliquam metus ex, efficitur quis augue id, fringilla maximus tortor.</p>
+		</div>
+		<div id="slider" class="unit unit-s-1 unit-m-1-3">
+			<img src="img/photography.svg" alt="">
+			<h4>PHOTOGRAPHY</h4>
+		</div>
+		<div id="slider" class="unit unit-s-1 unit-m-1-3">
+			<img src="img/film.svg" alt="">
+			<h4>FILM</h4>
 		</div>
 		</section>
-		
+
 	<script src="js/nav.js"></script>
 
 </body>
