--- a/index.html
+++ b/index.html
@@ -34,15 +34,21 @@
 		<nav class="nav nav-top" data-state="collasped">
 			<ul>
 				<li><a href="index.html">HOME</a></li>
+				<li><a href="#about">ABOUT</a></li>
 				<li><a href="#portfolio">PORTFOLIO</a></li>
-				<li><a href="#about">CONTACT</a></li>
+				<li><a href="#contact">CONTACT</a></li>
 			</ul>	
 		</nav>
 		<div class="home">
 			<img class="logo" src="img/logo.svg" alt="">
 		</div>
 	</section>
-		
+		<section id="about" class="about">
+		<div>
+			<h4>//HELLO</h4>
+			<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque cursus quam vel est interdum, eu porttitor diam sollicitudin. Suspendisse id erat lorem. Aliquam metus ex, efficitur quis augue id, fringilla maximus tortor.</p>
+		</div>
+		</section>
 		<section id="portfolio" class="grid">
 		<div id="slider" class="unit unit-s-1 unit-m-1-2 unit-l-1-4">
   			<ul>
@@ -78,7 +84,7 @@
 			</div>
 			</div>
 		</section>
-		<section id="about" class="grid contact">
+		<section id="contact" class="grid contact">
 		<div id="slider" class="unit unit-s-1 unit-m-1-3">
 			<img src="img/graphic-design.svg" alt="">
 			<h4>GRAPHIC DESIGN</h4>
