Added background image for contact

--- a/index.html
+++ b/index.html
@@ -43,62 +43,64 @@
 			<img class="logo" src="img/logo.svg" alt="">
 		</div>
 	</section>
-		<section id="about" class="about">
-		<div>
-			<h4>//HELLO</h4>
-			<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque cursus quam vel est interdum, eu porttitor diam sollicitudin. Suspendisse id erat lorem. Aliquam metus ex, efficitur quis augue id, fringilla maximus tortor.</p>
+	
+	<section id="about" class="about">
+	<div>
+		<h4>Hi, my name is Katie Situ.</h4>
+		<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque cursus quam vel est interdum, eu porttitor diam sollicitudin. Suspendisse id erat lorem. Aliquam metus ex, efficitur quis augue id, fringilla maximus tortor.</p>
+	</div>
+	</section>
+	
+	<section id="portfolio" class="grid">
+		<div class="unit unit-s-1 unit-m-1-2 unit-l-1-4">
+  			<ul>
+				<p class="caption">//PORTRAITS</p>
+				<li>
+					<img src="img/eben-2.jpg" alt="YUSSO">
+				</li>
+			</ul>
 		</div>
-		</section>
-		<section id="portfolio" class="grid">
-		<div id="slider" class="unit unit-s-1 unit-m-1-2 unit-l-1-4">
+		<div class="unit unit-s-1 unit-m-1-2 unit-l-1-4">
   			<ul>
-			<p class="caption">//PORTRAITS</p>
+				<p class="caption">//FASHION</p>
 				<li>
 					<img src="img/eben-2.jpg" alt="YUSSO">
 				</li>
 			</ul>
-			</div>
-			<div class="unit unit-s-1 unit-m-1-2 unit-l-1-4">
+		</div>
+		<div class="unit unit-s-1 unit-m-1-2 unit-l-1-4">
   			<ul>
-			<p class="caption">//FASHION</p>
+				<p class="caption">//MUSIC</p>
 				<li>
 					<img src="img/eben-2.jpg" alt="YUSSO">
 				</li>
 			</ul>
-			</div>
-			<div class="unit unit-s-1 unit-m-1-2 unit-l-1-4">
+		</div>
+		<div class="unit unit-s-1 unit-m-1-2 unit-l-1-4">
   			<ul>
-			<p class="caption">//MUSIC</p>
+				<p class="caption">//FOOD</p>
 				<li>
 					<img src="img/eben-2.jpg" alt="YUSSO">
 				</li>
 			</ul>
-			</div>
-			<div class="unit unit-s-1 unit-m-1-2 unit-l-1-4">
-  			<ul>
-			<p class="caption">//FOOD</p>
-				<li>
-					<img src="img/eben-2.jpg" alt="YUSSO">
-				</li>
-			</ul>
-			</div>
-			</div>
-		</section>
-		<section id="contact" class="grid contact">
-		<div id="slider" class="unit unit-s-1 unit-m-1-3">
+		</div>
+	</section>
+	
+	<section id="contact" class="grid contact">
+		<div class="unit unit-s-1 unit-m-1-3">
 			<img src="img/graphic-design.svg" alt="">
 			<h4>GRAPHIC DESIGN</h4>
 			<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque cursus quam vel est interdum, eu porttitor diam sollicitudin. Suspendisse id erat lorem. Aliquam metus ex, efficitur quis augue id, fringilla maximus tortor.</p>
 		</div>
-		<div id="slider" class="unit unit-s-1 unit-m-1-3">
+		<div class="unit unit-s-1 unit-m-1-3">
 			<img src="img/photography.svg" alt="">
 			<h4>PHOTOGRAPHY</h4>
 		</div>
-		<div id="slider" class="unit unit-s-1 unit-m-1-3">
+		<div class="unit unit-s-1 unit-m-1-3">
 			<img src="img/film.svg" alt="">
 			<h4>FILM</h4>
 		</div>
-		</section>
+	</section>
 
 	<script src="js/nav.js"></script>
 
