Adjusted padding and font size for contact

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 	<section id="about" class="about">
 	<div>
 		<h4>Hi, my name is Katie Situ.</h4>
-		<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque cursus quam vel est interdum, eu porttitor diam sollicitudin. Suspendisse id erat lorem. Aliquam metus ex, efficitur quis augue id, fringilla maximus tortor.</p>
+		<p>I am a graphic designer and photographer. I am currently studying Graphic Design and will shortly be graduating. </p>
 	</div>
 	</section>
 	
@@ -89,8 +89,7 @@
 	<section id="contact" class="grid contact">
 		<div class="unit unit-s-1 unit-m-1-3">
 			<img src="img/graphic-design.svg" alt="">
-			<h4>GRAPHIC DESIGN</h4>
-			<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque cursus quam vel est interdum, eu porttitor diam sollicitudin. Suspendisse id erat lorem. Aliquam metus ex, efficitur quis augue id, fringilla maximus tortor.</p>
+			<h4>GRAPHIC/WEB DESIGN</h4>
 		</div>
 		<div class="unit unit-s-1 unit-m-1-3">
 			<img src="img/photography.svg" alt="">
@@ -98,7 +97,7 @@
 		</div>
 		<div class="unit unit-s-1 unit-m-1-3">
 			<img src="img/film.svg" alt="">
-			<h4>FILM</h4>
+			<h4>ILLUSTRATION</h4>
 		</div>
 	</section>
 
