Changed image for contact

--- a/index.html
+++ b/index.html
@@ -89,14 +89,14 @@
 	<section id="contact" class="grid contact">
 		<div class="unit unit-s-1 unit-m-1-3">
 			<img src="img/graphic-design.svg" alt="">
-			<h4>GRAPHIC/WEB DESIGN</h4>
+			<h4>GRAPHIC &#38; WEB DESIGN</h4>
 		</div>
 		<div class="unit unit-s-1 unit-m-1-3">
 			<img src="img/photography.svg" alt="">
 			<h4>PHOTOGRAPHY</h4>
 		</div>
 		<div class="unit unit-s-1 unit-m-1-3">
-			<img src="img/film.svg" alt="">
+			<img src="img/illustration.svg" alt="">
 			<h4>ILLUSTRATION</h4>
 		</div>
 	</section>
