--- a/index.html
+++ b/index.html
@@ -44,11 +44,23 @@
 		</div>
 	</section>
 	
-	<section id="about" class="about">
-	<div>
-		<h4>Hi, my name is Katie Situ.</h4>
-		<p>I am a graphic designer and photographer. I am currently studying Graphic Design and will shortly be graduating. </p>
+	<section id="about" class="about grid">
+	<div class="intro">
+		<h3>Hi, my name is Katie Situ.</h3>
+		<p>I am a graphic and web designer, photographer, and illustrator. I am currently studying Graphic Design and will shortly be graduating. </p>
 	</div>
+	<div class="unit unit-s-1 unit-m-1-3">
+			<img src="img/graphic-design.svg" alt="">
+			<h4>GRAPHIC &#38; WEB DESIGN</h4>
+		</div>
+		<div class="unit unit-s-1 unit-m-1-3">
+			<img src="img/photography.svg" alt="">
+			<h4>PHOTOGRAPHY</h4>
+		</div>
+		<div class="unit unit-s-1 unit-m-1-3">
+			<img src="img/illustration.svg" alt="">
+			<h4>ILLUSTRATION</h4>
+		</div>
 	</section>
 	
 	<section id="portfolio" class="grid">
@@ -86,20 +98,14 @@
 		</div>
 	</section>
 	
-	<section id="contact" class="grid contact">
-		<div class="unit unit-s-1 unit-m-1-3">
-			<img src="img/graphic-design.svg" alt="">
-			<h4>GRAPHIC &#38; WEB DESIGN</h4>
-		</div>
-		<div class="unit unit-s-1 unit-m-1-3">
-			<img src="img/photography.svg" alt="">
-			<h4>PHOTOGRAPHY</h4>
-		</div>
-		<div class="unit unit-s-1 unit-m-1-3">
-			<img src="img/illustration.svg" alt="">
-			<h4>ILLUSTRATION</h4>
-		</div>
-	</section>
+	<footer id="contact" class="contact">
+		<div>
+			<h1>LET'S WORK TOGETHER</h1>
+			<h4>Get in touch to collaborate on new projects.</h4>
+			<h4>info@katiesitu.ca</h4>
+			<a href="index.html" alt="arrow"><img src="img/arrow.svg"/></a>
+			<p>©2014 Katie Situ</p> 
+	</footer>
 
 	<script src="js/nav.js"></script>
 
