--- a/index.html
+++ b/index.html
@@ -22,11 +22,8 @@
 <body>
 
 	<section class="top">
-		<div>
-			<ul class="social">
-				<li><a href="https://www.facebook.com/katiesituphotography"><i class="fa fa-facebook"></i><span class="hide-text">Facebook</span></a></li>
-				<li><a href="https://twitter.com/"><i class="fa fa-twitter"></i><span class="hide-text">Twitter</span></a></li>
-			</ul>
+		<div class="nav-logo">
+			<a href="index.html" alt="Logo Navigation"><img src="img/logo.svg"/></a>
 			<ul>
 				<li><a class="nav-btn hide-text" href="#nav">Navigation</a></li>
 			</ul>
@@ -104,6 +101,16 @@
 			<h4>Get in touch to collaborate on new projects.</h4>
 			<h4>info@katiesitu.ca</h4>
 			<a href="index.html" alt="arrow"><img src="img/arrow.svg"/></a>
+		</div>
+		<div>
+			<ul class="social">
+				<li><a href="https://www.facebook.com/katiesituphotography"><i class="fa fa-facebook"></i><span class="hide-text">Facebook</span></a></li>
+				<li><a href="https://twitter.com/"><i class="fa fa-twitter"></i><span class="hide-text">Twitter</span></a></li>
+			</ul>
+			<ul>
+				<li><a class="nav-btn hide-text" href="#nav">Navigation</a></li>
+			</ul>
+		</div>
 			<p>©2014 Katie Situ</p> 
 	</footer>
 
