Removed logo class

--- a/index.html
+++ b/index.html
@@ -36,14 +36,11 @@
 				<li><a href="#contact">CONTACT</a></li>
 			</ul>	
 		</nav>
-		<div class="home">
-			<img class="logo" src="img/logo.svg" alt="">
-		</div>
 	</section>
 	
 	<section id="about" class="about grid">
 	<div class="intro">
-		<h3>Hi, my name is Katie Situ.</h3>
+		<h1>HELLO</h1>
 		<p>I am a graphic and web designer, photographer, and illustrator. I am currently studying Graphic Design and will shortly be graduating. </p>
 	</div>
 	<div class="unit unit-s-1 unit-m-1-3">
