--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 		</div>
 		<nav class="nav nav-top" data-state="collasped">
 			<ul>
-				<li><a href="index.html">HOME</a></li>
+				<li><a href="#home">HOME</a></li>
 				<li><a href="#about">ABOUT</a></li>
 				<li><a href="#portfolio">PORTFOLIO</a></li>
 				<li><a href="#contact">CONTACT</a></li>
@@ -38,10 +38,16 @@
 		</nav>
 	</section>
 	
+	<section id="home">
+		<div class="home">
+			<img src="img/logo.svg" alt="Logo">
+		</div>
+	</section>
+	
 	<section id="about" class="about grid">
 	<div class="intro">
-		<h1>HELLO</h1>
-		<p>I am a graphic and web designer, photographer, and illustrator. I am currently studying Graphic Design and will shortly be graduating. </p>
+		<h1>HELLO AND WELCOME</h1>
+		<p>My name is Katie Situ and I am a versatile designer and photographer. I currently reside in Ottawa, Canada where I study Graphic Design. As a designer with many interests within the art industry, I strive to be as versatile as possible. I love to learn and discover. I am open-minded and always up for a challenge. Graphic Design is my passion and Photography is my peace, but I will always strive to be great at both. I plan to travel as often as I can.</p>
 	</div>
 	<div class="unit unit-s-1 unit-m-1-3">
 			<img src="img/graphic-design.svg" alt="">
