--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 		</div>
 	</section>
 	
-	<section id="portfolio" class="grid">
+	<section id="portfolio" class="portfolio grid">
 		<div class="unit unit-s-1 unit-m-1-2 unit-l-1-4">
   			<ul>
 				<p class="caption">//PORTRAITS</p>
