--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
 	<section class="top">
 		<div class="nav-logo">
-			<a href="index.html" alt="Logo Navigation"><img src="img/logo.svg"/></a>
+			<a class="small-logo" href="index.html" alt="Logo Navigation"><img src="img/logo.svg"/></a>
 			<ul>
 				<li><a class="nav-btn hide-text" href="#nav">Navigation</a></li>
 			</ul>
@@ -40,7 +40,7 @@
 	
 	<section id="home">
 		<div class="home">
-			<img src="img/logo.svg" alt="Logo">
+			<img class="large-logo" src="img/logo.svg" alt="Logo">
 		</div>
 	</section>
 	
@@ -49,26 +49,28 @@
 		<h1>HELLO AND WELCOME</h1>
 		<p>My name is Katie Situ and I am a versatile designer and photographer. I currently reside in Ottawa, Canada where I study Graphic Design. As a designer with many interests within the art industry, I strive to be as versatile as possible. I love to learn and discover. I am open-minded and always up for a challenge. Graphic Design is my passion and Photography is my peace, but I will always strive to be great at both. I plan to travel as often as I can.</p>
 	</div>
-	<div class="unit unit-s-1 unit-m-1-3">
-			<img src="img/graphic-design.svg" alt="">
+	<div class="icon-section unit unit-s-1 unit-m-1-3">
+			<img class="icon" src="img/graphic-design.svg" alt="">
 			<h4>GRAPHIC &#38; WEB DESIGN</h4>
 		</div>
 		<div class="unit unit-s-1 unit-m-1-3">
-			<img src="img/photography.svg" alt="">
+			<img class="icon" src="img/photography.svg" alt="">
 			<h4>PHOTOGRAPHY</h4>
 		</div>
 		<div class="unit unit-s-1 unit-m-1-3">
-			<img src="img/illustration.svg" alt="">
+			<img class="icon" src="img/illustration.svg" alt="">
 			<h4>ILLUSTRATION</h4>
 		</div>
 	</section>
 	
 	<section id="portfolio" class="portfolio grid">
+		<h1>PHOTOGRAPHY</h1>
 		<div class="unit unit-s-1 unit-m-1-2 unit-l-1-4">
   			<ul>
 				<p class="caption">//PORTRAITS</p>
+				<p>
 				<li>
-					<img src="img/eben-2.jpg" alt="YUSSO">
+					<img src="http://placehold.it/1500x3000" alt="YUSSO">
 				</li>
 			</ul>
 		</div>
@@ -76,23 +78,59 @@
   			<ul>
 				<p class="caption">//FASHION</p>
 				<li>
-					<img src="img/eben-2.jpg" alt="YUSSO">
+					<img src="http://placehold.it/1500x3000" alt="YUSSO">
 				</li>
 			</ul>
 		</div>
 		<div class="unit unit-s-1 unit-m-1-2 unit-l-1-4">
   			<ul>
-				<p class="caption">//MUSIC</p>
+				<p class="caption">//DESIGN</p>
 				<li>
-					<img src="img/eben-2.jpg" alt="YUSSO">
+					<img src="http://placehold.it/1500x3000" alt="YUSSO">
 				</li>
 			</ul>
 		</div>
 		<div class="unit unit-s-1 unit-m-1-2 unit-l-1-4">
   			<ul>
-				<p class="caption">//FOOD</p>
+				<p class="caption">//ILLUSTRATION</p>
 				<li>
-					<img src="img/eben-2.jpg" alt="YUSSO">
+					<img src="http://placehold.it/1500x3000" alt="YUSSO">
+				</li>
+			</ul>
+		</div>
+	</section>
+		<section class="portfolio grid">
+		<h1>DESIGN</h1>
+		<div class="unit unit-s-1 unit-m-1-2 unit-l-1-4">
+  			<ul>
+				<p class="caption">//PORTRAITS</p>
+				<p>
+				<li>
+					<img src="http://placehold.it/1500x3000" alt="YUSSO">
+				</li>
+			</ul>
+		</div>
+		<div class="unit unit-s-1 unit-m-1-2 unit-l-1-4">
+  			<ul>
+				<p class="caption">//FASHION</p>
+				<li>
+					<img src="http://placehold.it/1500x3000" alt="YUSSO">
+				</li>
+			</ul>
+		</div>
+		<div class="unit unit-s-1 unit-m-1-2 unit-l-1-4">
+  			<ul>
+				<p class="caption">//DESIGN</p>
+				<li>
+					<img src="http://placehold.it/1500x3000" alt="YUSSO">
+				</li>
+			</ul>
+		</div>
+		<div class="unit unit-s-1 unit-m-1-2 unit-l-1-4">
+  			<ul>
+				<p class="caption">//ILLUSTRATION</p>
+				<li>
+					<img src="http://placehold.it/1500x3000" alt="YUSSO">
 				</li>
 			</ul>
 		</div>
@@ -112,6 +150,8 @@
 			<p>©2014 Katie Situ</p> 
 	</footer>
 
+	<script src="http://code.jquery.com/jquery-2.1.1.min.js"></script>
+	<script src="js/waypoints.min.js"></script>
 	<script src="js/nav.js"></script>
 
 </body>
