--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Katie Situ</title>
+	<link href="css/main.css" rel="stylesheet">
+	<link rel="stylesheet" href="flexslider/flexslider.css" type="text/css">
 	<meta name="handheldfriendly" content="true">
 		<meta name="mobileoptimized" content="240">
 		<meta name="description" content="Katie Situ &middot; Photographer and Graphic Designer from Ottawa, Ontario, Canada.">
@@ -14,7 +16,6 @@
 		<link rel="author" href="humans.txt" />
 		<link rel="author" href="robots.txt" />
 	<link href='http://fonts.googleapis.com/css?family=Lato:300,400,700,900,300italic' rel='stylesheet' type='text/css'>
-	<link href="css/main.css" rel="stylesheet">
 	<link href="http://netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css" rel="stylesheet">
 	<link rel="shortcut icon" href="img/logo.svg"/>
 </head>
@@ -62,80 +63,28 @@
 			<h4>ILLUSTRATION</h4>
 		</div>
 	</section>
-	
+	 
 	<section id="portfolio" class="portfolio grid">
 		<h1>PHOTOGRAPHY</h1>
-		<div class="unit unit-s-1 unit-m-1-2 unit-l-1-4">
-  			<ul>
-				<p class="caption">//PORTRAITS</p>
-				<p>
+		<div class="flexslider unit unit-s-1 unit-m-1-2 unit-l-1-3">
+			<p class="caption">//PORTRAITS</p>
+  			<ul class="slides">
+				<li>
+					<img src="img/dani-5.jpg" alt="YUSSO">
+				</li>
 				<li>
 					<img src="http://placehold.it/1500x3000" alt="YUSSO">
 				</li>
-			</ul>
-		</div>
-		<div class="unit unit-s-1 unit-m-1-2 unit-l-1-4">
-  			<ul>
-				<p class="caption">//FASHION</p>
 				<li>
 					<img src="http://placehold.it/1500x3000" alt="YUSSO">
 				</li>
-			</ul>
-		</div>
-		<div class="unit unit-s-1 unit-m-1-2 unit-l-1-4">
-  			<ul>
-				<p class="caption">//DESIGN</p>
-				<li>
-					<img src="http://placehold.it/1500x3000" alt="YUSSO">
-				</li>
-			</ul>
-		</div>
-		<div class="unit unit-s-1 unit-m-1-2 unit-l-1-4">
-  			<ul>
-				<p class="caption">//ILLUSTRATION</p>
 				<li>
 					<img src="http://placehold.it/1500x3000" alt="YUSSO">
 				</li>
 			</ul>
 		</div>
 	</section>
-		<section class="portfolio grid">
-		<h1>DESIGN</h1>
-		<div class="unit unit-s-1 unit-m-1-2 unit-l-1-4">
-  			<ul>
-				<p class="caption">//PORTRAITS</p>
-				<p>
-				<li>
-					<img src="http://placehold.it/1500x3000" alt="YUSSO">
-				</li>
-			</ul>
-		</div>
-		<div class="unit unit-s-1 unit-m-1-2 unit-l-1-4">
-  			<ul>
-				<p class="caption">//FASHION</p>
-				<li>
-					<img src="http://placehold.it/1500x3000" alt="YUSSO">
-				</li>
-			</ul>
-		</div>
-		<div class="unit unit-s-1 unit-m-1-2 unit-l-1-4">
-  			<ul>
-				<p class="caption">//DESIGN</p>
-				<li>
-					<img src="http://placehold.it/1500x3000" alt="YUSSO">
-				</li>
-			</ul>
-		</div>
-		<div class="unit unit-s-1 unit-m-1-2 unit-l-1-4">
-  			<ul>
-				<p class="caption">//ILLUSTRATION</p>
-				<li>
-					<img src="http://placehold.it/1500x3000" alt="YUSSO">
-				</li>
-			</ul>
-		</div>
-	</section>
-	
+
 	<footer id="contact" class="contact">
 		<div>
 			<h1>LET'S WORK TOGETHER</h1>
@@ -150,8 +99,20 @@
 			<p>©2014 Katie Situ</p> 
 	</footer>
 
-	<script src="http://code.jquery.com/jquery-2.1.1.min.js"></script>
-	<script src="js/waypoints.min.js"></script>
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.6.2/jquery.min.js"></script>
+
+	<script src="flexslider/jquery.flexslider.js"></script>
+	
+	<script type="text/javascript">
+		$(window).load(function() {
+			$('.flexslider').flexslider({
+			animation: "slide",
+			smoothHeight: "true",
+			touch: "true",
+			keyboard: "true",
+			});
+		});
+	</script>
 	<script src="js/nav.js"></script>
 
 </body>
