--- a/index.html
+++ b/index.html
@@ -66,11 +66,62 @@
 	 
 	<section id="portfolio" class="portfolio grid">
 		<h1>PHOTOGRAPHY</h1>
-		<div class="flexslider unit unit-s-1 unit-m-1-2 unit-l-1-3">
+		<div class="flexslider unit unit-s-1 unit-m-1-2 unit-l-1-4">
 			<p class="caption">//PORTRAITS</p>
   			<ul class="slides">
 				<li>
-					<img src="img/dani-5.jpg" alt="YUSSO">
+					<img src="http://placehold.it/1500x3000" alt="YUSSO">
+				</li>
+				<li>
+					<img src="http://placehold.it/1500x3000" alt="YUSSO">
+				</li>
+				<li>
+					<img src="http://placehold.it/1500x3000" alt="YUSSO">
+				</li>
+				<li>
+					<img src="http://placehold.it/1500x3000" alt="YUSSO">
+				</li>
+			</ul>
+		</div>
+		<div class="flexslider unit unit-s-1 unit-m-1-2 unit-l-1-4">
+			<p class="caption">//LANDSCAPE</p>
+  			<ul class="slides">
+				<li>
+					<img src="http://placehold.it/1500x3000" alt="YUSSO">
+				</li>
+				<li>
+					<img src="http://placehold.it/1500x3000" alt="YUSSO">
+				</li>
+				<li>
+					<img src="http://placehold.it/1500x3000" alt="YUSSO">
+				</li>
+				<li>
+					<img src="http://placehold.it/1500x3000" alt="YUSSO">
+				</li>
+			</ul>
+		</div>
+		<div class="flexslider unit unit-s-1 unit-m-1-2 unit-l-1-4">
+			<p class="caption">//MUSIC</p>
+  			<ul class="slides">
+				<li>
+					<img src="http://placehold.it/1500x3000" alt="YUSSO">
+				</li>
+				<li>
+					<img src="http://placehold.it/1500x3000" alt="YUSSO">
+				</li>
+				<li>
+					<img src="http://placehold.it/1500x3000" alt="YUSSO">
+				</li>
+				<li>
+					<img src="http://placehold.it/1500x3000" alt="YUSSO">
+				</li>
+			</ul>
+		</div>
+		<div class="flexslider unit unit-s-1 unit-m-1-2 unit-l-1-4">
+			<p class="caption">//FOOD</p>
+  			<ul class="slides">
+				<li>
+					<img src="http://placehold.it/1500x3000" alt="YUSSO">
 				</li>
 				<li>
 					<img src="http://placehold.it/1500x3000" alt="YUSSO">
@@ -84,7 +135,79 @@
 			</ul>
 		</div>
 	</section>
-
+	
+		<section class="portfolio grid">
+		<h1>DESIGN</h1>
+		<div class="flexslider unit unit-s-1 unit-m-1-2 unit-l-1-4">
+			<p class="caption">//XANDER SITU LOGO DESIGN</p>
+  			<ul class="slides">
+				<li>
+					<img src="http://placehold.it/1500x3000" alt="YUSSO">
+				</li>
+				<li>
+					<img src="http://placehold.it/1500x3000" alt="YUSSO">
+				</li>
+				<li>
+					<img src="http://placehold.it/1500x3000" alt="YUSSO">
+				</li>
+				<li>
+					<img src="http://placehold.it/1500x3000" alt="YUSSO">
+				</li>
+			</ul>
+		</div>
+		<div class="flexslider unit unit-s-1 unit-m-1-2 unit-l-1-4">
+			<p class="caption">//NY MANHATTAN SUBWAY MAP</p>
+  			<ul class="slides">
+				<li>
+					<img src="http://placehold.it/1500x3000" alt="YUSSO">
+				</li>
+				<li>
+					<img src="http://placehold.it/1500x3000" alt="YUSSO">
+				</li>
+				<li>
+					<img src="http://placehold.it/1500x3000" alt="YUSSO">
+				</li>
+				<li>
+					<img src="http://placehold.it/1500x3000" alt="YUSSO">
+				</li>
+			</ul>
+		</div>
+		<div class="flexslider unit unit-s-1 unit-m-1-2 unit-l-1-4">
+			<p class="caption">//BLVCK NINJVS PRESS KIT</p>
+  			<ul class="slides">
+				<li>
+					<img src="http://placehold.it/1500x3000" alt="YUSSO">
+				</li>
+				<li>
+					<img src="http://placehold.it/1500x3000" alt="YUSSO">
+				</li>
+				<li>
+					<img src="http://placehold.it/1500x3000" alt="YUSSO">
+				</li>
+				<li>
+					<img src="http://placehold.it/1500x3000" alt="YUSSO">
+				</li>
+			</ul>
+		</div>
+		<div class="flexslider unit unit-s-1 unit-m-1-2 unit-l-1-4">
+			<p class="caption">//STACK TEA PACKAGE DESIGN</p>
+  			<ul class="slides">
+				<li>
+					<img src="http://placehold.it/1500x3000" alt="YUSSO">
+				</li>
+				<li>
+					<img src="http://placehold.it/1500x3000" alt="YUSSO">
+				</li>
+				<li>
+					<img src="http://placehold.it/1500x3000" alt="YUSSO">
+				</li>
+				<li>
+					<img src="http://placehold.it/1500x3000" alt="YUSSO">
+				</li>
+			</ul>
+		</div>
+	</section>
+	
 	<footer id="contact" class="contact">
 		<div>
 			<h1>LET'S WORK TOGETHER</h1>
