Added new photos for slideshows

--- a/index.html
+++ b/index.html
@@ -65,144 +65,105 @@
 	</section>
 	 
 	<section id="portfolio" class="portfolio grid">
-		<h1>PHOTOGRAPHY</h1>
+		<h1>PORTFOLIO</h1>
 		<div class="flexslider unit unit-s-1 unit-m-1-2 unit-l-1-4">
-			<p class="caption">//PORTRAITS</p>
+			<p class="caption">//PHOTOGRAPHY</p>
   			<ul class="slides">
 				<li>
-					<img src="http://placehold.it/1500x3000" alt="YUSSO">
+					<img src="img/yusso.svg" alt="YUSSO">
 				</li>
 				<li>
-					<img src="http://placehold.it/1500x3000" alt="YUSSO">
+					<img src="http://placehold.it/1500x2000" alt="YUSSO">
 				</li>
 				<li>
-					<img src="http://placehold.it/1500x3000" alt="YUSSO">
+					<img src="http://placehold.it/1500x2000" alt="YUSSO">
 				</li>
 				<li>
-					<img src="http://placehold.it/1500x3000" alt="YUSSO">
+					<img src="http://placehold.it/1500x2000" alt="YUSSO">
+				</li>
+				<li>
+					<img src="img/dani.svg" alt="YUSSO">
+				</li>
+				<li>
+					<img src="http://placehold.it/1500x2000" alt="DANI">
+				</li>
+				<li>
+					<img src="http://placehold.it/1500x2000" alt="DANI">
+				</li>
+				<li>
+					<img src="http://placehold.it/1500x2000" alt="DANI">
+				</li>
+				<li>
+					<img src="img/jem.svg" alt="YUSSO">
+				</li>
+				<li>
+					<img src="http://placehold.it/1500x2000" alt="JEM">
+				</li>
+				<li>
+					<img src="http://placehold.it/1500x2000" alt="JEM">
+				</li>
+				<li>
+					<img src="http://placehold.it/1500x2000" alt="JEM">
 				</li>
 			</ul>
 		</div>
 		<div class="flexslider unit unit-s-1 unit-m-1-2 unit-l-1-4">
-			<p class="caption">//LANDSCAPE</p>
+			<p class="caption">//BRANDING</p>
   			<ul class="slides">
 				<li>
-					<img src="http://placehold.it/1500x3000" alt="YUSSO">
+					<img src="http://placehold.it/1500x2000" alt="YUSSO">
 				</li>
 				<li>
-					<img src="http://placehold.it/1500x3000" alt="YUSSO">
+					<img src="http://placehold.it/1500x2000" alt="YUSSO">
 				</li>
 				<li>
-					<img src="http://placehold.it/1500x3000" alt="YUSSO">
-				</li>
-				<li>
-					<img src="http://placehold.it/1500x3000" alt="YUSSO">
+					<img src="img/xandersitu.svg" alt="YUSSO">
 				</li>
 			</ul>
 		</div>
 		<div class="flexslider unit unit-s-1 unit-m-1-2 unit-l-1-4">
-			<p class="caption">//MUSIC</p>
+			<p class="caption">//PRINT DESIGN</p>
   			<ul class="slides">
 				<li>
-					<img src="http://placehold.it/1500x3000" alt="YUSSO">
+					<img src="http://placehold.it/1500x2000" alt="YUSSO">
 				</li>
 				<li>
-					<img src="http://placehold.it/1500x3000" alt="YUSSO">
+					<img src="http://placehold.it/1500x2000" alt="YUSSO">
 				</li>
 				<li>
-					<img src="http://placehold.it/1500x3000" alt="YUSSO">
+					<img src="http://placehold.it/1500x2000" alt="YUSSO">
 				</li>
 				<li>
-					<img src="http://placehold.it/1500x3000" alt="YUSSO">
+					<img src="img/ny.svg" alt="YUSSO">
+				</li>
+				<li>
+					<img src="http://placehold.it/1500x2000" alt="YUSSO">
+				</li>
+				<li>
+					<img src="http://placehold.it/1500x2000" alt="YUSSO">
+				</li>
+				<li>
+					<img src="http://placehold.it/1500x2000" alt="YUSSO">
+				</li>
+				<li>
+					<img src="img/stashtea.svg" alt="YUSSO">
 				</li>
 			</ul>
 		</div>
 		<div class="flexslider unit unit-s-1 unit-m-1-2 unit-l-1-4">
-			<p class="caption">//FOOD</p>
+			<p class="caption">//STATIONERY DESIGN</p>
   			<ul class="slides">
 				<li>
-					<img src="http://placehold.it/1500x3000" alt="YUSSO">
+					<img src="http://placehold.it/1500x2000" alt="YUSSO">
 				</li>
 				<li>
-					<img src="http://placehold.it/1500x3000" alt="YUSSO">
+					<img src="http://placehold.it/1500x2000" alt="YUSSO">
 				</li>
 				<li>
-					<img src="http://placehold.it/1500x3000" alt="YUSSO">
+					<img src="http://placehold.it/1500x2000" alt="YUSSO">
 				</li>
 				<li>
-					<img src="http://placehold.it/1500x3000" alt="YUSSO">
-				</li>
-			</ul>
-		</div>
-	</section>
-	
-		<section class="portfolio grid">
-		<h1>DESIGN</h1>
-		<div class="flexslider unit unit-s-1 unit-m-1-2 unit-l-1-4">
-			<p class="caption">//XANDER SITU LOGO DESIGN</p>
-  			<ul class="slides">
-				<li>
-					<img src="http://placehold.it/1500x3000" alt="YUSSO">
-				</li>
-				<li>
-					<img src="http://placehold.it/1500x3000" alt="YUSSO">
-				</li>
-				<li>
-					<img src="http://placehold.it/1500x3000" alt="YUSSO">
-				</li>
-				<li>
-					<img src="http://placehold.it/1500x3000" alt="YUSSO">
-				</li>
-			</ul>
-		</div>
-		<div class="flexslider unit unit-s-1 unit-m-1-2 unit-l-1-4">
-			<p class="caption">//NY MANHATTAN SUBWAY MAP</p>
-  			<ul class="slides">
-				<li>
-					<img src="http://placehold.it/1500x3000" alt="YUSSO">
-				</li>
-				<li>
-					<img src="http://placehold.it/1500x3000" alt="YUSSO">
-				</li>
-				<li>
-					<img src="http://placehold.it/1500x3000" alt="YUSSO">
-				</li>
-				<li>
-					<img src="http://placehold.it/1500x3000" alt="YUSSO">
-				</li>
-			</ul>
-		</div>
-		<div class="flexslider unit unit-s-1 unit-m-1-2 unit-l-1-4">
-			<p class="caption">//BLVCK NINJVS PRESS KIT</p>
-  			<ul class="slides">
-				<li>
-					<img src="http://placehold.it/1500x3000" alt="YUSSO">
-				</li>
-				<li>
-					<img src="http://placehold.it/1500x3000" alt="YUSSO">
-				</li>
-				<li>
-					<img src="http://placehold.it/1500x3000" alt="YUSSO">
-				</li>
-				<li>
-					<img src="http://placehold.it/1500x3000" alt="YUSSO">
-				</li>
-			</ul>
-		</div>
-		<div class="flexslider unit unit-s-1 unit-m-1-2 unit-l-1-4">
-			<p class="caption">//STACK TEA PACKAGE DESIGN</p>
-  			<ul class="slides">
-				<li>
-					<img src="http://placehold.it/1500x3000" alt="YUSSO">
-				</li>
-				<li>
-					<img src="http://placehold.it/1500x3000" alt="YUSSO">
-				</li>
-				<li>
-					<img src="http://placehold.it/1500x3000" alt="YUSSO">
-				</li>
-				<li>
-					<img src="http://placehold.it/1500x3000" alt="YUSSO">
+					<img src="" alt="YUSSO">
 				</li>
 			</ul>
 		</div>
