Added more photos to the slideshows

--- a/index.html
+++ b/index.html
@@ -119,6 +119,18 @@
 				<li>
 					<img src="img/xandersitu.svg" alt="YUSSO">
 				</li>
+					<li>
+					<img src="http://placehold.it/1500x2000" alt="YUSSO">
+				</li>
+				<li>
+					<img src="http://placehold.it/1500x2000" alt="YUSSO">
+				</li>
+				<li>
+					<img src="http://placehold.it/1500x2000" alt="YUSSO">
+				</li>
+				<li>
+					<img src="img/blackninjas.svg" alt="YUSSO">
+				</li>
 			</ul>
 		</div>
 		<div class="flexslider unit unit-s-1 unit-m-1-2 unit-l-1-4">
@@ -133,9 +145,14 @@
 				<li>
 					<img src="http://placehold.it/1500x2000" alt="YUSSO">
 				</li>
-				<li>
+					<li>
 					<img src="img/ny.svg" alt="YUSSO">
 				</li>
+			</ul>
+		</div>
+		<div class="flexslider unit unit-s-1 unit-m-1-2 unit-l-1-4">
+			<p class="caption">//PACKAGE DESIGN</p>
+  			<ul class="slides">
 				<li>
 					<img src="http://placehold.it/1500x2000" alt="YUSSO">
 				</li>
@@ -148,22 +165,6 @@
 				<li>
 					<img src="img/stashtea.svg" alt="YUSSO">
 				</li>
-			</ul>
-		</div>
-		<div class="flexslider unit unit-s-1 unit-m-1-2 unit-l-1-4">
-			<p class="caption">//STATIONERY DESIGN</p>
-  			<ul class="slides">
-				<li>
-					<img src="http://placehold.it/1500x2000" alt="YUSSO">
-				</li>
-				<li>
-					<img src="http://placehold.it/1500x2000" alt="YUSSO">
-				</li>
-				<li>
-					<img src="http://placehold.it/1500x2000" alt="YUSSO">
-				</li>
-				<li>
-					<img src="" alt="YUSSO">
 				</li>
 			</ul>
 		</div>
