Added viewport for mobile and quote

--- a/index.html
+++ b/index.html
@@ -41,7 +41,8 @@
 	
 	<section id="home">
 		<div class="home">
-			<img class="large-logo" src="img/logo.svg" alt="Logo">
+			<h3>KATIE SITU</h3>
+			<i><p>ALWAYS STRIVE FOR BETTER THAN YOUR BEST</p></i>
 		</div>
 	</section>
 	
