Fixed validation errors

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
 	<section class="top">
 		<div class="nav-logo">
-			<a class="small-logo" href="index.html" alt="Logo Navigation"><img src="img/logo.svg"/></a>
+			<a class="small-logo" href="index.html"><img src="img/logo.svg"alt="Logo Navigation"></a>
 			<ul>
 				<li><a class="nav-btn hide-text" href="#nav">Navigation</a></li>
 			</ul>
@@ -42,7 +42,7 @@
 	<section id="home">
 		<div class="home">
 			<h3>KATIE SITU</h3>
-			<i><p>ALWAYS STRIVE FOR BETTER THAN YOUR BEST</p></i>
+			<p><i>ALWAYS STRIVE FOR BETTER THAN YOUR BEST</i></p>
 		</div>
 	</section>
 	
@@ -166,7 +166,6 @@
 				<li>
 					<img src="img/stashtea.svg" alt="YUSSO">
 				</li>
-				</li>
 			</ul>
 		</div>
 	</section>
@@ -180,7 +179,7 @@
 				<li><a href="https://www.facebook.com/katiesituphotography"><i class="fa fa-facebook"></i><span class="hide-text">Facebook</span></a></li>
 				<li><a href="https://twitter.com/"><i class="fa fa-twitter"></i><span class="hide-text">Twitter</span></a></li>
 			</ul>
-			<a href="index.html" alt="arrow"><img src="img/arrow.svg"/></a>
+			<a href="index.html"><img src="img/arrow.svg" alt="arrow"></a>
 		</div>
 			<p>©2014 Katie Situ</p> 
 	</footer>
