Fixed home font sizes

--- a/index.html
+++ b/index.html
@@ -39,11 +39,7 @@
 		</nav>
 	</section>
 	
-	<section id="home">
-		<div class="home">
-			<h3>KATIE SITU</h3>
-			<p><i>ALWAYS STRIVE FOR BETTER THAN YOUR BEST</i></p>
-		</div>
+	<section id="home" class="home">
 	</section>
 	
 	<section id="about" class="about grid">
