--- a/index.html
+++ b/index.html
@@ -40,6 +40,8 @@
 	</section>
 	
 	<section id="home" class="home">
+		<img src="img/logo.svg" alt="Logo">
+		<h5>GRAPHIC DESIGN / PHOTOGRAPHY</h5>
 	</section>
 	
 	<section id="about" class="about grid">
