Adjusted about section background

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 	<section id="about" class="about grid">
 	<div class="intro">
 		<h1>HELLO AND WELCOME</h1>
-		<p>My name is Katie Situ and I am a versatile designer and photographer. I currently reside in Ottawa, Canada where I study Graphic Design. As a designer with many interests within the art industry, I strive to be as versatile as possible. I love to learn and discover. I am open-minded and always up for a challenge. Graphic Design is my passion and Photography is my peace, but I will always strive to be great at both. I plan to travel as often as I can.</p>
+		<p>My name is <i>Katie Situ</i> and I am a versatile designer and photographer. I currently reside in Ottawa, Canada where I study Graphic Design. As a designer with many interests within the art industry, I strive to be as versatile as possible. I love to learn and discover. I am open-minded and always up for a challenge. Graphic Design is my passion and Photography is my peace, but I will always strive to be great at both.</p>
 	</div>
 	<div class="icon-section unit unit-s-1 unit-m-1-3">
 			<img class="icon" src="img/graphic-design.svg" alt="">
