Changed background colour for portfolio section

--- a/index.html
+++ b/index.html
@@ -31,10 +31,10 @@
 		</div>
 		<nav class="nav nav-top" data-state="collasped">
 			<ul>
-				<li><a href="#home">HOME</a></li>
-				<li><a href="#about">ABOUT</a></li>
-				<li><a href="#portfolio">PORTFOLIO</a></li>
-				<li><a href="#contact">CONTACT</a></li>
+				<li class="link1"><a href="#home">HOME</a></li>
+				<li class="link2"><a href="#about">ABOUT</a></li>
+				<li class="link3"><a href="#portfolio">PORTFOLIO</a></li>
+				<li class="link4"><a href="#contact">CONTACT</a></li>
 			</ul>	
 		</nav>
 	</section>
@@ -72,7 +72,7 @@
 					<img src="img/yusso.svg" alt="YUSSO">
 				</li>
 				<li>
-					<img src="http://placehold.it/1500x2000" alt="YUSSO">
+					<img src="img/eben-2.jpg" alt="YUSSO">
 				</li>
 				<li>
 					<img src="http://placehold.it/1500x2000" alt="YUSSO">
