Changed class: caption to photo-caption

--- a/index.html
+++ b/index.html
@@ -66,103 +66,91 @@
 	<section id="portfolio" class="portfolio grid">
 		<h1>PORTFOLIO</h1>
 		<div class="flexslider unit unit-s-1 unit-m-1-2 unit-l-1-4">
-			<p class="caption">//PHOTOGRAPHY</p>
+			<p class="photo-caption">//PORTRAIT</p>
   			<ul class="slides">
 				<li>
-					<img src="img/yusso.svg" alt="YUSSO">
+					<img src="img/dani-7.jpg" alt="DANI">
 				</li>
 				<li>
-					<img src="img/eben-2.jpg" alt="YUSSO">
+					<img src="img/dani-66.jpg" alt="DANI">
 				</li>
 				<li>
-					<img src="http://placehold.it/1500x2000" alt="YUSSO">
+					<img src="img/eben-1.jpg" alt="YUSSO">
 				</li>
 				<li>
-					<img src="http://placehold.it/1500x2000" alt="YUSSO">
+					<img src="img/eben-3.jpg" alt="YUSSO">
 				</li>
 				<li>
-					<img src="img/dani.svg" alt="YUSSO">
+					<img src="img/eben-12.jpg" alt="YUSSO">
 				</li>
 				<li>
-					<img src="http://placehold.it/1500x2000" alt="DANI">
+					<img src="img/twin-4.jpg" alt="AYMI">
 				</li>
 				<li>
-					<img src="http://placehold.it/1500x2000" alt="DANI">
+					<img src="img/jem-4.jpg" alt="JEM">
 				</li>
 				<li>
-					<img src="http://placehold.it/1500x2000" alt="DANI">
-				</li>
-				<li>
-					<img src="img/jem.svg" alt="YUSSO">
-				</li>
-				<li>
-					<img src="http://placehold.it/1500x2000" alt="JEM">
-				</li>
-				<li>
-					<img src="http://placehold.it/1500x2000" alt="JEM">
-				</li>
-				<li>
-					<img src="http://placehold.it/1500x2000" alt="JEM">
+					<img src="img/jem-55.jpg" alt="JEM">
 				</li>
 			</ul>
 		</div>
 		<div class="flexslider unit unit-s-1 unit-m-1-2 unit-l-1-4">
-			<p class="caption">//BRANDING</p>
+			<p class="photo-caption">//LANDSCAPE AND NATURE</p>
   			<ul class="slides">
 				<li>
-					<img src="http://placehold.it/1500x2000" alt="YUSSO">
+					<img src="img/carsonblack.jpg" alt="Cars In Hong Kong">
 				</li>
 				<li>
-					<img src="http://placehold.it/1500x2000" alt="YUSSO">
+					<img src="img/other-1.jpg" alt="Cycler">
 				</li>
 				<li>
-					<img src="img/xandersitu.svg" alt="YUSSO">
-				</li>
-					<li>
-					<img src="http://placehold.it/1500x2000" alt="YUSSO">
+					<img src="img/hk.jpg" alt="Hong Kong">
 				</li>
 				<li>
-					<img src="http://placehold.it/1500x2000" alt="YUSSO">
+					<img src="img/other-2.jpg" alt="Berries">
 				</li>
 				<li>
-					<img src="http://placehold.it/1500x2000" alt="YUSSO">
-				</li>
-				<li>
-					<img src="img/blackninjas.svg" alt="YUSSO">
+					<img src="img/other-3.jpg" alt="Ferry Street">
 				</li>
 			</ul>
 		</div>
 		<div class="flexslider unit unit-s-1 unit-m-1-2 unit-l-1-4">
-			<p class="caption">//PRINT DESIGN</p>
+			<p class="photo-caption">//GRAPHIC AND WEB DESIGN</p>
   			<ul class="slides">
 				<li>
-					<img src="http://placehold.it/1500x2000" alt="YUSSO">
+					<img src="img/carsonblack.jpg" alt="Cars In Hong Kong">
 				</li>
 				<li>
-					<img src="http://placehold.it/1500x2000" alt="YUSSO">
+					<img src="img/other-1.jpg" alt="Cycler">
 				</li>
 				<li>
-					<img src="http://placehold.it/1500x2000" alt="YUSSO">
+					<img src="img/hk.jpg" alt="Hong Kong">
 				</li>
-					<li>
-					<img src="img/ny.svg" alt="YUSSO">
+				<li>
+					<img src="img/other-2.jpg" alt="Berries">
+				</li>
+				<li>
+					<img src="img/other-3.jpg" alt="Ferry Street">
 				</li>
 			</ul>
 		</div>
 		<div class="flexslider unit unit-s-1 unit-m-1-2 unit-l-1-4">
-			<p class="caption">//PACKAGE DESIGN</p>
+			<p class="photo-caption">//ILLUSTRATION</p>
   			<ul class="slides">
 				<li>
-					<img src="http://placehold.it/1500x2000" alt="YUSSO">
+					<img src="img/carsonblack.jpg" alt="Cars In Hong Kong">
 				</li>
 				<li>
-					<img src="http://placehold.it/1500x2000" alt="YUSSO">
+					<img src="img/other-1.jpg" alt="Cycler">
 				</li>
 				<li>
-					<img src="http://placehold.it/1500x2000" alt="YUSSO">
+					<img src="img/hk.jpg" alt="Hong Kong">
 				</li>
 				<li>
-					<img src="img/stashtea.svg" alt="YUSSO">
+					<img src="img/other-2.jpg" alt="Berries">
+				</li>
+				<li>
+					<img src="img/other-3.jpg" alt="Ferry Street">
 				</li>
 			</ul>
 		</div>
@@ -177,7 +165,7 @@
 				<li><a href="https://www.facebook.com/katiesituphotography"><i class="fa fa-facebook"></i><span class="hide-text">Facebook</span></a></li>
 				<li><a href="https://twitter.com/"><i class="fa fa-twitter"></i><span class="hide-text">Twitter</span></a></li>
 			</ul>
-			<a href="index.html"><img src="img/arrow.svg" alt="arrow"></a>
+			<a href="#home"><img src="img/arrow.svg" alt="arrow"></a>
 		</div>
 			<p>©2014 Katie Situ</p> 
 	</footer>
