Edited top button icon

--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
 				<li><a href="https://www.facebook.com/katiesituphotography"><i class="fa fa-facebook"></i><span class="hide-text">Facebook</span></a></li>
 				<li><a href="https://twitter.com/"><i class="fa fa-twitter"></i><span class="hide-text">Twitter</span></a></li>
 			</ul>
-			<a href="#home"><img src="img/arrow.svg" alt="arrow"></a>
+			<a href="#home"><img src="img/top.svg" alt="Top Button"></a>
 		</div>
 			<p>©2014 Katie Situ</p> 
 	</footer>
