--- a/index.html
+++ b/index.html
@@ -29,12 +29,12 @@
 				<li><a class="nav-btn hide-text" href="#nav">Navigation</a></li>
 			</ul>
 		</div>
-		<nav class="nav nav-top" data-state="collasped">
+		<nav class="nav nav-top slideDown" data-state="collasped">
 			<ul>
-				<li class="link1"><a href="#home">HOME</a></li>
-				<li class="link2"><a href="#about">ABOUT</a></li>
-				<li class="link3"><a href="#portfolio">PORTFOLIO</a></li>
-				<li class="link4"><a href="#contact">CONTACT</a></li>
+				<li class="ease-all"><a href="#home">HOME</a></li>
+				<li class="ease-all"><a href="#about">ABOUT</a></li>
+				<li class="ease-all"><a href="#portfolio">PORTFOLIO</a></li>
+				<li class="ease-all"><a href="#contact">CONTACT</a></li>
 			</ul>	
 		</nav>
 	</section>
@@ -69,28 +69,28 @@
 			<p class="photo-caption">//PORTRAIT</p>
   			<ul class="slides">
 				<li>
-					<img src="img/dani-7.jpg" alt="DANI">
+					<img src="img/dani-7.png" alt="DANI">
 				</li>
 				<li>
-					<img src="img/dani-66.jpg" alt="DANI">
+					<img src="img/dani-66.png" alt="DANI">
 				</li>
 				<li>
-					<img src="img/eben-1.jpg" alt="YUSSO">
+					<img src="img/eben-1.png" alt="YUSSO">
 				</li>
 				<li>
-					<img src="img/eben-3.jpg" alt="YUSSO">
+					<img src="img/eben-3.png" alt="YUSSO">
 				</li>
 				<li>
-					<img src="img/eben-12.jpg" alt="YUSSO">
+					<img src="img/eben-12.png" alt="YUSSO">
 				</li>
 				<li>
-					<img src="img/twin-4.jpg" alt="AYMI">
+					<img src="img/twin-4.png" alt="AYMI">
 				</li>
 				<li>
-					<img src="img/jem-4.jpg" alt="JEM">
+					<img src="img/jem-4.png" alt="JEM">
 				</li>
 				<li>
-					<img src="img/jem-55.jpg" alt="JEM">
+					<img src="img/jem-55.png" alt="JEM">
 				</li>
 			</ul>
 		</div>
@@ -98,19 +98,19 @@
 			<p class="photo-caption">//LANDSCAPE AND NATURE</p>
   			<ul class="slides">
 				<li>
-					<img src="img/carsonblack.jpg" alt="Cars In Hong Kong">
+					<img src="img/carsonblack.png" alt="Cars In Hong Kong">
 				</li>
 				<li>
-					<img src="img/other-1.jpg" alt="Cycler">
+					<img src="img/other-1.png" alt="Cycler">
 				</li>
 				<li>
-					<img src="img/hk.jpg" alt="Hong Kong">
+					<img src="img/hk.png" alt="Hong Kong">
 				</li>
 				<li>
-					<img src="img/other-2.jpg" alt="Berries">
+					<img src="img/other-2.png" alt="Berries">
 				</li>
 				<li>
-					<img src="img/other-3.jpg" alt="Ferry Street">
+					<img src="img/other-3.png" alt="Ferry Street">
 				</li>
 			</ul>
 		</div>
@@ -118,19 +118,19 @@
 			<p class="photo-caption">//GRAPHIC AND WEB DESIGN</p>
   			<ul class="slides">
 				<li>
-					<img src="img/carsonblack.jpg" alt="Cars In Hong Kong">
+					<img src="img/carsonblack.png" alt="Cars In Hong Kong">
 				</li>
 				<li>
-					<img src="img/other-1.jpg" alt="Cycler">
+					<img src="img/other-1.png" alt="Cycler">
 				</li>
 				<li>
-					<img src="img/hk.jpg" alt="Hong Kong">
+					<img src="img/hk.png" alt="Hong Kong">
 				</li>
 				<li>
-					<img src="img/other-2.jpg" alt="Berries">
+					<img src="img/other-2.png" alt="Berries">
 				</li>
 				<li>
-					<img src="img/other-3.jpg" alt="Ferry Street">
+					<img src="img/other-3.png" alt="Ferry Street">
 				</li>
 			</ul>
 		</div>
@@ -138,19 +138,19 @@
 			<p class="photo-caption">//ILLUSTRATION</p>
   			<ul class="slides">
 				<li>
-					<img src="img/carsonblack.jpg" alt="Cars In Hong Kong">
+					<img src="img/carsonblack.png" alt="Cars In Hong Kong">
 				</li>
 				<li>
-					<img src="img/other-1.jpg" alt="Cycler">
+					<img src="img/other-1.png" alt="Cycler">
 				</li>
 				<li>
-					<img src="img/hk.jpg" alt="Hong Kong">
+					<img src="img/hk.png" alt="Hong Kong">
 				</li>
 				<li>
-					<img src="img/other-2.jpg" alt="Berries">
+					<img src="img/other-2.png" alt="Berries">
 				</li>
 				<li>
-					<img src="img/other-3.jpg" alt="Ferry Street">
+					<img src="img/other-3.png" alt="Ferry Street">
 				</li>
 			</ul>
 		</div>
@@ -169,11 +169,14 @@
 		</div>
 			<p>©2014 Katie Situ</p> 
 	</footer>
-
-	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.6.2/jquery.min.js"></script>
-
-	<script src="flexslider/jquery.flexslider.js"></script>
 	
+	<script src="http://code.jquery.com/jquery-2.1.1.min.js"></script>
+	<script src="js/jquery.scrollTo.min.js"></script>
+	<script src="js/jquery.localScroll.min.js"></script>
+	<script src="js/waypoints.min.js"></script>
+	<script src="js/main.js"></script>
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.6.2/jquery.min.js"></script>
+	<script src="flexslider/jquery.flexslider.js"></script>
 	<script type="text/javascript">
 		$(window).load(function() {
 			$('.flexslider').flexslider({
