Changed photo names

--- a/index.html
+++ b/index.html
@@ -98,13 +98,13 @@
 			<p class="photo-caption">//LANDSCAPE AND NATURE</p>
   			<ul class="slides">
 				<li>
-					<img src="img/carsonblack.png" alt="Cars In Hong Kong">
+					<img src="img/other-7.png" alt="Cars In Hong Kong">
 				</li>
 				<li>
 					<img src="img/other-1.png" alt="Cycler">
 				</li>
 				<li>
-					<img src="img/hk.png" alt="Hong Kong">
+					<img src="img/other-8.png" alt="Hong Kong">
 				</li>
 				<li>
 					<img src="img/other-2.png" alt="Berries">
